--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Lambda Calculus Visualizer</title>
     <link rel="icon" href="frontend/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="frontend/styles.css">
+    <link rel="preconnect" href="https://fonts.bunny.net">
+    <link href="https://fonts.bunny.net/css?family=felipa:400" rel="stylesheet" />
 </head>
 
 <body>
